# Knife

./: .gitignore  CleanCode.c  README.md  build.gradle  in.bat  push.bat
app/: CMakeLists.txt  build.gradle
app/release/: app-release.apk
app/src/main/: AndroidManifest.xml
app/src/main/assets/static/: _index.html  _list.html  action_panel.css  app.css  app.js  dom.js  hidden.css  icon.css  index.html  layout.css  list.css  menu.css  modal.css  reset.css  toolbar.css  upload.js
app/src/main/cpp/: Bridge.cpp  Bridge.h  FileUtils.cpp  FileUtils.h  Files.cpp  Files.h  HttpServer.cpp  HttpServer.h  JNIHelper.h  StringUtils.cpp  StringUtils.h  Strings.cpp  Strings.h  defs.h  epub.h  file.c  file.h  file.hpp  httplib.cc  httplib.h  list.c  list.h  log.c  log.h  native-lib.c  shared.h  str.h  string.c  string.h
app/src/main/cpp/images/: CMakeLists.txt  Image.cpp  Image.h
app/src/main/cpp/markdown/: CMakeLists.txt
app/src/main/cpp/zip/: miniz.h  zip.c  zip.h
app/src/main/java/euphoria/common/: BaseActivity.java  Bitmaps.java  Collections.java  Contexts.java  Crashs.java  (+14 more)
app/src/main/proto/: thumbnail_cache_entry.proto
app/src/main/res/anim/: menu_enter_from_bottom.xml  menu_exit_from_bottom.xml
app/src/main/res/color/: blue_mode_tint.xml  default_text_color_list.xml  default_text_color_secondary_list.xml
app/src/main/res/drawable/: btn.xml  downloads_big.xml  ic_add_to_queue_black.xml  ic_add_to_queue_white.xml  ic_add_to_queue_white_48px.xml  ic_airplay_black.xml  ic_airplay_white.xml  ic_airplay_white_48px.xml  ic_album_black.xml  ic_album_white.xml  ic_album_white_48px.xml  ic_art_track_black.xml  ic_art_track_white.xml  ic_art_track_white_48px.xml  ic_av_timer_black.xml  ic_av_timer_white.xml  ic_av_timer_white_48px.xml  ic_bookmark_24px.xml  ic_branding_watermark_black.xml  ic_branding_watermark_white.xml  ic_branding_watermark_white_48px.xml  ic_cab_cancel.xml  ic_call_to_action_black.xml  ic_call_to_action_white.xml  ic_call_to_action_white_48px.xml  ic_closed_caption_black.xml  ic_closed_caption_white.xml  ic_closed_caption_white_48px.xml  ic_create_new_folder_blue_24px.xml  ic_drive_document_24dp.xml  ic_equalizer_black.xml  ic_equalizer_white.xml  ic_equalizer_white_48px.xml  ic_explicit_black.xml  ic_explicit_white.xml  ic_explicit_white_48px.xml  ic_fast_forward_black.xml  ic_fast_forward_white.xml  ic_fast_forward_white_48px.xml  ic_fast_rewind_black.xml  (+208 more)
app/src/main/res/layout/: activity_file_server.xml  activity_main.xml  activity_video.xml  activity_video_trim.xml  app_menu_layout.xml  bottomsheet_menu.xml  bottomsheet_menu_item.xml  dialog_bookmark.xml  dialog_move_progress.xml  dialog_operation_progress.xml  dialog_properties.xml  dialog_rename_by_regex.xml  directory_toolbar.xml  download_toolbar.xml  fragment_directory.xml  fragment_download.xml  fragment_player.xml  fragment_video.xml  item_document_list.xml  item_download_list.xml  list_menu_button.xml  modern_list_item_view.xml  notification.xml  number_roll_view.xml  photo_activity_view.xml  photo_fragment_view.xml  search_toolbar.xml  selectable_list_layout.xml  view_time_line.xml
app/src/main/res/menu/: menu_drawer.xml  options_directory.xml  options_download.xml  options_video.xml  video.xml
app/src/main/res/values/: bools.xml  colors.xml  declare-styleables.xml  dimens.xml  drawables.xml  fractions.xml  integers.xml  items.xml  pluralss.xml  strings.xml  styles.xml
app/src/main/res/values-zh-rCN/: pluralss.xml  strings.xml
app/src/main/res/xml/: preferences_layout.xml
(+352 files in other folders)
